--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <script src="https://unpkg.com/scrollreveal@3.3.2/dist/scrollreveal.min.js"></script>
 <script>
     
-//window.sr = ScrollReveal().reveal('.reveal', { duration: 1200, reset: true, mobile: false });
+window.sr = ScrollReveal().reveal('.reveal', { duration: 1200, reset: true, mobile: false });
 
 $(document).ready(function(){
 
