Fixed missing time

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="row reveal">
                     <div class="col-md-10 col-md-offset-1 col-xs-12">
                         <h1><b>DELI HOURS</b></h1>
-                        <h2>Weekdays: 5:30 - 5:00 pm</h2>
+                        <h2>Weekdays: 5:30 am - 5:00 pm</h2>
                         <h2>Saturdays: 6:00 am - 3:00 pm</h2>
                         <h2>Sundays: Closed</h2>
                         <br>
