Added online ordering demo feature

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/fce54115db.js"></script>
+    <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async ></script>
     <link href="https://fonts.googleapis.com/css?family=Neucha|Nothing+You+Could+Do|Raleway|Slabo+27px|Homemade+Apple|Courgette|Kalam|Yellowtail" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/hover.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -36,7 +37,7 @@
                             <li><a href="menuB.html">Lunch Menu</a></li>
                         </ul>
                     </li>
-                    <li class="menuOption"><a href="#anchor1"><b>ORDERING</b></a></li>
+                    <li class="menuOption"><a data-glf-cuid="21800406-fbbc-42c3-bf55-c1d9a1d729c6" data-glf-ruid="75709b93-c437-4d37-ab9c-79c5a6d66209" data-glf-auto-open="false" href="#"><b>ORDER</b></a></li>
                     <li class="menuOption"><a href="#anchor2"><b>CONTACT</b></a></li>
                 </ul>
                 <p class="navbar-text"><i class="fa fa-phone-square" aria-hidden="true"> <span id="phone">(609) 896-1848</span></i></p>
@@ -83,6 +84,11 @@
                             </figcaption>
                             <a href="menuB.html"><img class="img-responsive menuImg" src="assets/images/lunch.jpg"></a>
                         </figure>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 col-xs-12" id="orderBtnRow">
+                        <span class="glf-button" data-glf-cuid="21800406-fbbc-42c3-bf55-c1d9a1d729c6" data-glf-ruid="75709b93-c437-4d37-ab9c-79c5a6d66209" data-glf-auto-open="false"> Order Online!</span> 
                     </div>
                 </div>
             </div>
