--- a/menuB.html
+++ b/menuB.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async ></script>
     <script src="https://use.fontawesome.com/fce54115db.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Neucha|Nothing+You+Could+Do|Raleway|Slabo+27px|Homemade+Apple|Architects+Daughter" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -35,7 +36,7 @@
                             <li><a href="menuB.html">Lunch Menu</a></li>
                         </ul>
                     </li>
-                    <li class="menuOption"><a href="#anchor2"><b>ORDERING</b></a></li>
+                    <li class="menuOption"><a data-glf-cuid="21800406-fbbc-42c3-bf55-c1d9a1d729c6" data-glf-ruid="75709b93-c437-4d37-ab9c-79c5a6d66209" data-glf-auto-open="false" href="#"><b>ORDER</b></a></li>
                     <li class="menuOption"><a href="#anchor2"><b>CONTACT</b></a></li>
                 </ul>
                 <p class="navbar-text"><i class="fa fa-phone-square" aria-hidden="true"> <span id="phone">(609) 896-1848</span></i></p>
