Added several design updates

--- a/menu.html
+++ b/menu.html
@@ -16,8 +16,8 @@
 <body>
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img alt="Brand" src="assets/images/small_franklin_logo.png">
+            <a class="navbar-brand navbar-right" href="index.html">
+                <p><i>FRANKLIN CORNER DELI</i></p>
             </a>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
