--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/fce54115db.js"></script>
     <script src="https://www.foodbooking.com/widget/js/ewm2.js" defer async ></script>
-    <link href="https://fonts.googleapis.com/css?family=Neucha|Nothing+You+Could+Do|Raleway|Slabo+27px|Homemade+Apple|Courgette|Kalam|Yellowtail" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="assets/css/hover.css">
+    <link href="https://fonts.googleapis.com/css?family=Neucha|Nothing+You+Could+Do|Raleway|Slabo+27px|Homemade+Apple|Courgette|Kalam|Yellowtail|Parisienne" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -17,8 +16,8 @@
 <body>
     <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                <img alt="Brand" src="assets/images/small_franklin_logo.png">
+            <a class="navbar-brand navbar-right" href="index.html">
+                <p><i>FRANKLIN CORNER DELI</i></p>
             </a>
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -37,7 +36,7 @@
                             <li><a href="menuB.html">Lunch Menu</a></li>
                         </ul>
                     </li>
-                    <li class="menuOption"><a data-glf-cuid="21800406-fbbc-42c3-bf55-c1d9a1d729c6" data-glf-ruid="75709b93-c437-4d37-ab9c-79c5a6d66209" data-glf-auto-open="false" href="#"><b>ORDER</b></a></li>
+                    <li class="menuOption"><a data-glf-cuid="21800406-fbbc-42c3-bf55-c1d9a1d729c6" data-glf-ruid="75709b93-c437-4d37-ab9c-79c5a6d66209" data-glf-auto-open="false" href="#"><b>ORDER ONLINE</b></a></li>
                     <li class="menuOption"><a href="#anchor2"><b>CONTACT</b></a></li>
                 </ul>
                 <p class="navbar-text"><i class="fa fa-phone-square" aria-hidden="true"> <span id="phone">(609) 896-1848</span></i></p>
@@ -45,19 +44,20 @@
 
         </div>
     </nav>
-    <!--<div class="jumbotron banner">
-<h1 id="bannerSlogan"><i>FRANKLIN CORNER DELI</i></h1>
-<h2><b>Since 1947</b></h2>
-<h2>FRESH & ARTISAN DELICATESSEN</h2>
-</div>-->
-    <div class="container-fluid">
-        <div class="row">
+
+<div class="jumbotron banner">
+    <h1 id="bannerSlogan"><b>Franklin Corner Deli</b></h1>
+    <h2 class="bannerSub">Est. 1979</h2>
+    <h2 class="bannerSub bannerBottom">FRESH & ARTISAN DELICATESSEN</h2>
+</div>
+<div class="container-fluid">
+        <!--<div class="row">
             <div class="col-md-12 col-xs-12 parallax">
-                <h1 id="bannerSlogan">Franklin Corner Deli</h1>
+                <h1 id="bannerSlogan"><b>Franklin Corner Deli</b></h1>
                 <h1 class="bannerSub">Est. 1979</h1>
                 <h2 class="bannerSub bannerBottom">FRESH & ARTISAN DELICATESSEN</h2>
             </div>
-        </div>
+        </div>-->
         <div class="row">
             <div class="col-md-12 col-xs-12 section">
                 <h1><b>DAILY MENU</b></h1>
@@ -235,6 +235,11 @@
 window.sr = ScrollReveal().reveal('.reveal', { duration: 1200, reset: true, mobile: false });
 
 $(document).ready(function(){
+
+    $('#carousel-example-generic').carousel({
+        interval: false
+    });
+
 
     $('a[href*="#"]:not([href="#"])').click(function() {
       if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
