Modified several mobile parameters

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-5 col-md-offset-1 col-xs-12 menu">
+                    <div class="col-md-5 col-md-offset-1 col-sm-6 col-xs-12 menu">
                         <figure>
                             <figcaption class="figRed">
                                 <a class="headingClick" href="menu.html"><h2 class="menuHeading">BREAKFAST</h2></a>
@@ -77,7 +77,7 @@
                             <a href="menu.html"><img class="img-responsive menuImg" src="assets/images/breakfast.jpg"></a>
                         </figure>
                     </div>
-                    <div class="col-md-5 col-xs-12 menu">
+                    <div class="col-md-5 col-sm-6 col-xs-12 menu">
                         <figure>
                             <figcaption class="figRed">
                                 <a class="headingClick" href="menuB.html"><h2 class="menuHeading">LUNCH</h2></a>
@@ -121,12 +121,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-10 col-md-offset-1 col-xs-12">
+                    <div class="col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
                         <p id="paraA">Unlike the fast food restaurants and impersonal chain stores popping up on every corner, we are the last of the few "Real Deal" local delis, crafting up delicious food, prepared with only the freshest ingredients, served with genuine care. We pride ourselves on knowing that we never serve unhealthy, pre-packaged, preservative-filled breakfasts and lunches to our customers, customers we consider our friends.</p> 
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-2 col-md-offset-1 col-xs-12" id="carouselSection">
+                    <div class="col-md-2 col-md-offset-1 col-sm-4 col-xs-12" id="carouselSection">
                         <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                             <!-- Indicators -->
                             <ol class="carousel-indicators">
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-8 col-xs-12">
+                    <div class="col-md-8 col-sm-8 col-xs-12">
                         <p>To our loyal friends who know, appreciate and rely on us for this every day, we thank you so much for your support. Thank you for allowing your local, small business to thrive, through thick and thin with many cookie cutter chain stores in between, since 1979. With over 30 years experience as a valuable member of our community, we also consider each one of our customers to be just as valuable.</p>
                         <p>From the Franklin Corner Deli family to you and yours, we sincerely extend our love. Through these words we share with you today and the food we share with you tomorrow, we hope to continue to serve you and this community we love for many more years to come.</p>
                         <p>Sincerely,</p>
